--- a/res/layout/list_item_crime.xml
+++ b/res/layout/list_item_crime.xml
@@ -8,6 +8,7 @@
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content" 
     	android:gravity="center"
+    	android:layout_alignParentEnd="true"
     	android:layout_alignParentRight="true"
     	android:enabled="false"
     	android:focusable="false"
